logs/django-bootlog.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bootlog'...
Listing './lib/python3.5/site-packages/bootlog/static'...
Listing './lib/python3.5/site-packages/bootlog/static/css'...
Listing './lib/python3.5/site-packages/bootlog/static/fonts'...
Listing './lib/python3.5/site-packages/bootlog/static/img'...
Listing './lib/python3.5/site-packages/bootlog/static/js'...
Listing './lib/python3.5/site-packages/bootlog/templates'...
Listing './lib/python3.5/site-packages/bootlog/templates/bootlog'...
Listing './lib/python3.5/site-packages/bootlog/templates/search'...
Listing './lib/python3.5/site-packages/bootlog/templates/search/indexes'...
Listing './lib/python3.5/site-packages/bootlog/templates/search/indexes/bootlog'...
Compiling './lib/python3.5/site-packages/bootlog/tests.py'...
***   File "./lib/python3.5/site-packages/bootlog/tests.py", line 24
    print "****&&&&&&&&&&-----------", Post.objects.filter(entry="Entry")
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_bootlog-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
